Go to the origin with Q learning, also update goodness of each state to prevent value estimation from growing indefinitely

--- a/heisenberg_group/Donald/Q_learning_to_origin.ipynb
+++ b/heisenberg_group/Donald/Q_learning_to_origin.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,14 @@
     "C = np.array([[1, 0, 0], [0, 1, 1], [0, 0, 1]])\n",
     "D = np.array([[1, 0, 0], [0, 1, -1], [0, 0, 1]])\n",
     "\n",
+    "identity = np.array([[1, 0, 0], [0, 1, 0], [0, 0, 1]])\n",
+    "\n",
     "# together, A, B, C, and D generate the heisenberg group"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,69 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getReward(matrix):\n",
-    "    if (matrix==A).all() or (matrix==B).all() or (matrix==C).all() or (matrix==D).all():\n",
-    "        return 20\n",
+    "    if (matrix==identity).all():\n",
+    "        return 100\n",
     "    else:\n",
-    "        # return -1 + 1/(2 + abs(matrix[0][1]) + abs(matrix[0][2]) + abs(matrix[1][2]))\n",
-    "        return -10"
+    "        return -5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[-10, -10, -10, -10]"
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# adapted from ChatGPT\n",
-    "class CustomDefaultDict(dict):\n",
-    "    def __init__(self, default_factory, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
-    "        self.default_factory = default_factory\n",
-    "\n",
-    "    def __missing__(self, key):\n",
-    "        # Compute the default value based on the missing key\n",
-    "        default_value = self.default_factory(key)\n",
-    "        self[key] = default_value  # Cache the default value for future lookups\n",
-    "        return default_value\n",
-    "\n",
-    "def default_value_for_key(key):\n",
-    "    # Define a function that computes the default value based on the key\n",
-    "    val1 = key[0]\n",
-    "    val2 = key[1]\n",
-    "    val3 = key[2]\n",
-    "    cur_matrix = np.array([[1, val1, val2], [0, 1, val3], [0, 0, 1]])\n",
-    "    output1 = getReward(cur_matrix @ A)\n",
-    "    output2 = getReward(cur_matrix @ B)\n",
-    "    output3 = getReward(cur_matrix @ C)\n",
-    "    output4 = getReward(cur_matrix @ D)\n",
-    "    return [output1, output2, output3, output4]\n",
-    "\n",
-    "custom_dict = CustomDefaultDict(default_value_for_key)\n",
-    "\n",
-    "cur_mat = A@A@B\n",
-    "\n",
-    "custom_dict[(cur_mat[0][1], cur_mat[0][2], cur_mat[1][2])]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,218 +139,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average reward for the last 500 iterations: -970.8\n",
+      "Average reward for the last 500 iterations: -497.27\n",
       "epsilon: 0.9511319235669539\n",
-      "Average reward for the last 500 iterations: -952.4\n",
+      "Average reward for the last 500 iterations: -494.12\n",
       "epsilon: 0.9047424102692004\n",
-      "Average reward for the last 500 iterations: -931.8\n",
+      "Average reward for the last 500 iterations: -472.91\n",
       "epsilon: 0.8606154505570021\n",
-      "Average reward for the last 500 iterations: -933.8\n",
+      "Average reward for the last 500 iterations: -453.8\n",
       "epsilon: 0.8186406930090225\n",
-      "Average reward for the last 500 iterations: -875.8\n",
+      "Average reward for the last 500 iterations: -433.43\n",
       "epsilon: 0.7787131683686925\n",
-      "Average reward for the last 500 iterations: -765.8\n",
+      "Average reward for the last 500 iterations: -343.76\n",
       "epsilon: 0.7407330270401349\n",
-      "Average reward for the last 500 iterations: -680.4\n",
+      "Average reward for the last 500 iterations: -258.71\n",
       "epsilon: 0.7046052893871948\n",
-      "Average reward for the last 500 iterations: -572.0\n",
+      "Average reward for the last 500 iterations: -116.75\n",
       "epsilon: 0.6702396082111141\n",
-      "Average reward for the last 500 iterations: -480.0\n",
+      "Average reward for the last 500 iterations: 32.14\n",
       "epsilon: 0.6375500428128791\n",
-      "Average reward for the last 500 iterations: -454.8\n",
+      "Average reward for the last 500 iterations: 226.81\n",
       "epsilon: 0.6064548440752141\n",
-      "Average reward for the last 500 iterations: -388.2\n",
+      "Average reward for the last 500 iterations: 442.06\n",
       "epsilon: 0.576876250026757\n",
-      "Average reward for the last 500 iterations: -340.6\n",
+      "Average reward for the last 500 iterations: 576.46\n",
       "epsilon: 0.548740291377179\n",
-      "Average reward for the last 500 iterations: -346.4\n",
+      "Average reward for the last 500 iterations: 849.25\n",
       "epsilon: 0.5219766065369207\n",
-      "Average reward for the last 500 iterations: -321.4\n",
+      "Average reward for the last 500 iterations: 1043.5\n",
       "epsilon: 0.4965182656589779\n",
-      "Average reward for the last 500 iterations: -248.8\n",
+      "Average reward for the last 500 iterations: 1217.8\n",
       "epsilon: 0.47230160326267795\n",
-      "Average reward for the last 500 iterations: -258.4\n",
+      "Average reward for the last 500 iterations: 1408.9\n",
       "epsilon: 0.4492660590208893\n",
-      "Average reward for the last 500 iterations: -239.2\n",
+      "Average reward for the last 500 iterations: 1529.02\n",
       "epsilon: 0.42735402631251446\n",
-      "Average reward for the last 500 iterations: -203.0\n",
+      "Average reward for the last 500 iterations: 1715.71\n",
       "epsilon: 0.406510708161521\n",
-      "Average reward for the last 500 iterations: -218.4\n",
+      "Average reward for the last 500 iterations: 1900.3\n",
       "epsilon: 0.3866839802022521\n",
-      "Average reward for the last 500 iterations: -182.2\n",
+      "Average reward for the last 500 iterations: 2017.69\n",
       "epsilon: 0.3678242603283259\n",
-      "Average reward for the last 500 iterations: -191.2\n",
+      "Average reward for the last 500 iterations: 2081.74\n",
       "epsilon: 0.3498843846991425\n",
-      "Average reward for the last 500 iterations: -181.4\n",
+      "Average reward for the last 500 iterations: 2302.66\n",
       "epsilon: 0.332819489793915\n",
-      "Average reward for the last 500 iterations: -171.2\n",
+      "Average reward for the last 500 iterations: 2402.41\n",
       "epsilon: 0.3165869002182801\n",
-      "Average reward for the last 500 iterations: -170.0\n",
+      "Average reward for the last 500 iterations: 2490.19\n",
       "epsilon: 0.3011460219829101\n",
-      "Average reward for the last 500 iterations: -161.8\n",
+      "Average reward for the last 500 iterations: 2550.25\n",
       "epsilon: 0.28645824098724004\n",
-      "Average reward for the last 500 iterations: -164.6\n",
+      "Average reward for the last 500 iterations: 2691.58\n",
       "epsilon: 0.27248682645444433\n",
-      "Average reward for the last 500 iterations: -138.0\n",
+      "Average reward for the last 500 iterations: 2665.12\n",
       "epsilon: 0.2591968390761776\n",
-      "Average reward for the last 500 iterations: -123.6\n",
+      "Average reward for the last 500 iterations: 2816.11\n",
       "epsilon: 0.24655504363736244\n",
-      "Average reward for the last 500 iterations: -132.0\n",
+      "Average reward for the last 500 iterations: 2927.2\n",
       "epsilon: 0.23452982590252897\n",
-      "Average reward for the last 500 iterations: -152.6\n",
+      "Average reward for the last 500 iterations: 2926.15\n",
       "epsilon: 0.22309111355585096\n",
-      "Average reward for the last 500 iterations: -135.2\n",
+      "Average reward for the last 500 iterations: 2931.82\n",
       "epsilon: 0.21221030099717023\n",
-      "Average reward for the last 500 iterations: -130.6\n",
+      "Average reward for the last 500 iterations: 3077.56\n",
       "epsilon: 0.20186017780594118\n",
-      "Average reward for the last 500 iterations: -124.6\n",
+      "Average reward for the last 500 iterations: 3120.4\n",
       "epsilon: 0.19201486069420162\n",
-      "Average reward for the last 500 iterations: -120.2\n",
+      "Average reward for the last 500 iterations: 3200.83\n",
       "epsilon: 0.1826497287783945\n",
-      "Average reward for the last 500 iterations: -101.0\n",
+      "Average reward for the last 500 iterations: 3219.52\n",
       "epsilon: 0.17374136200817725\n",
-      "Average reward for the last 500 iterations: -122.6\n",
+      "Average reward for the last 500 iterations: 3272.44\n",
       "epsilon: 0.16526748259824006\n",
-      "Average reward for the last 500 iterations: -127.4\n",
+      "Average reward for the last 500 iterations: 3318.85\n",
       "epsilon: 0.1572068993166638\n",
-      "Average reward for the last 500 iterations: -108.2\n",
+      "Average reward for the last 500 iterations: 3285.04\n",
       "epsilon: 0.14953945449050376\n",
-      "Average reward for the last 500 iterations: -122.2\n",
-      "epsilon: 0.14224597359606533\n",
-      "Average reward for the last 500 iterations: -125.2\n",
-      "epsilon: 0.13530821730781062\n",
-      "Average reward for the last 500 iterations: -136.6\n",
-      "epsilon: 0.1287088358859816\n",
-      "Average reward for the last 500 iterations: -96.4\n",
-      "epsilon: 0.12243132578887629\n",
-      "Average reward for the last 500 iterations: -136.0\n",
-      "epsilon: 0.11645998840126634\n",
-      "Average reward for the last 500 iterations: -132.6\n",
-      "epsilon: 0.11077989077575923\n",
-      "Average reward for the last 500 iterations: -141.6\n",
-      "epsilon: 0.1053768282889138\n",
-      "Average reward for the last 500 iterations: -107.4\n",
-      "epsilon: 0.10023728911873117\n",
-      "Average reward for the last 500 iterations: -119.2\n",
-      "epsilon: 0.09534842045468113\n",
-      "Average reward for the last 500 iterations: -113.4\n",
-      "epsilon: 0.09069799635576713\n",
-      "Average reward for the last 500 iterations: -130.0\n",
-      "epsilon: 0.0862743871762469\n",
-      "Average reward for the last 500 iterations: -98.8\n",
-      "epsilon: 0.08206653048255198\n",
-      "Average reward for the last 500 iterations: -103.6\n",
-      "epsilon: 0.07806390338867449\n",
-      "Average reward for the last 500 iterations: -125.8\n",
-      "epsilon: 0.0742564962408389\n",
-      "Average reward for the last 500 iterations: -97.4\n",
-      "epsilon: 0.07063478758564987\n",
-      "Average reward for the last 500 iterations: -107.6\n",
-      "epsilon: 0.0671897203591181\n",
-      "Average reward for the last 500 iterations: -95.2\n",
-      "epsilon: 0.06391267923701738\n",
-      "Average reward for the last 500 iterations: -93.2\n",
-      "epsilon: 0.06079546908993113\n",
-      "Average reward for the last 500 iterations: -99.2\n",
-      "epsilon: 0.05783029448911036\n",
-      "Average reward for the last 500 iterations: -115.2\n",
-      "epsilon: 0.0550097402118921\n",
-      "Average reward for the last 500 iterations: -93.0\n",
-      "epsilon: 0.052326752697925104\n",
-      "Average reward for the last 500 iterations: -89.2\n",
-      "epsilon: 0.049774622409830716\n",
-      "Average reward for the last 500 iterations: -97.6\n",
-      "epsilon: 0.0473469670541865\n",
-      "Average reward for the last 500 iterations: -99.8\n",
-      "epsilon: 0.04503771562087175\n",
-      "Average reward for the last 500 iterations: -84.8\n",
-      "epsilon: 0.042841093200861234\n",
-      "Average reward for the last 500 iterations: -113.6\n",
-      "epsilon: 0.04075160654450075\n",
-      "Average reward for the last 500 iterations: -79.6\n",
-      "epsilon: 0.03876403032414705\n",
-      "Average reward for the last 500 iterations: -114.4\n",
-      "epsilon: 0.03687339406682043\n",
-      "Average reward for the last 500 iterations: -86.2\n",
-      "epsilon: 0.035074969724189636\n",
-      "Average reward for the last 500 iterations: -88.2\n",
-      "epsilon: 0.03336425984880598\n",
-      "Average reward for the last 500 iterations: -83.6\n",
-      "epsilon: 0.0317369863470172\n",
-      "Average reward for the last 500 iterations: -90.0\n",
-      "epsilon: 0.03018907978043465\n",
-      "Average reward for the last 500 iterations: -95.2\n",
-      "epsilon: 0.028716669189199965\n",
-      "Average reward for the last 500 iterations: -101.0\n",
-      "epsilon: 0.02731607241160077\n",
-      "Average reward for the last 500 iterations: -88.0\n",
-      "epsilon: 0.025983786875827575\n",
-      "Average reward for the last 500 iterations: -85.6\n",
-      "epsilon: 0.024716480840843772\n",
-      "Average reward for the last 500 iterations: -74.8\n",
-      "epsilon: 0.023510985064463932\n",
-      "Average reward for the last 500 iterations: -81.4\n",
-      "epsilon: 0.022364284877805257\n",
-      "Average reward for the last 500 iterations: -111.4\n",
-      "epsilon: 0.02127351264629087\n",
-      "Average reward for the last 500 iterations: -81.2\n",
-      "epsilon: 0.020235940598352414\n",
-      "Average reward for the last 500 iterations: -75.8\n",
-      "epsilon: 0.019248974003897912\n",
-      "Average reward for the last 500 iterations: -80.2\n",
-      "epsilon: 0.01831014468548625\n",
-      "Average reward for the last 500 iterations: -81.2\n",
-      "epsilon: 0.017417104845980344\n",
-      "Average reward for the last 500 iterations: -85.2\n",
-      "epsilon: 0.016567621197244295\n",
-      "Average reward for the last 500 iterations: -86.8\n",
-      "epsilon: 0.01575956937520108\n",
-      "Average reward for the last 500 iterations: -87.0\n",
-      "epsilon: 0.014990928627284598\n",
-      "Average reward for the last 500 iterations: -92.6\n",
-      "epsilon: 0.014259776759000002\n",
-      "Average reward for the last 500 iterations: -99.4\n",
-      "epsilon: 0.01356428532695572\n",
-      "Average reward for the last 500 iterations: -87.2\n",
-      "epsilon: 0.012902715066345043\n",
-      "Average reward for the last 500 iterations: -88.4\n",
-      "epsilon: 0.012273411541443215\n",
-      "Average reward for the last 500 iterations: -90.6\n",
-      "epsilon: 0.011674801008242563\n",
-      "Average reward for the last 500 iterations: -93.0\n",
-      "epsilon: 0.01110538647887905\n",
-      "Average reward for the last 500 iterations: -83.6\n",
-      "epsilon: 0.010563743978008472\n",
-      "Average reward for the last 500 iterations: -109.0\n",
-      "epsilon: 0.010048518981770194\n",
-      "Average reward for the last 500 iterations: -104.2\n",
-      "epsilon: 0.009558423030433163\n",
-      "Average reward for the last 500 iterations: -78.8\n",
-      "epsilon: 0.009092230506253211\n",
-      "Average reward for the last 500 iterations: -85.2\n",
-      "epsilon: 0.008648775568483598\n",
-      "Average reward for the last 500 iterations: -89.8\n",
-      "epsilon: 0.008226949237874486\n",
-      "Average reward for the last 500 iterations: -99.8\n",
-      "epsilon: 0.007825696623369606\n",
-      "Average reward for the last 500 iterations: -93.6\n",
-      "epsilon: 0.007444014284065363\n",
-      "Average reward for the last 500 iterations: -90.2\n",
-      "epsilon: 0.007080947719834949\n"
+      "Average reward for the last 500 iterations: 3385.42\n",
+      "epsilon: 0.14224597359606533\n"
      ]
     }
    ],
    "source": [
     "# adapted from CS 540 Spring 2023 HW 10\n",
-    "EPISODES = 300000\n",
-    "# EPISODES = 50000\n",
+    "# EPISODES = 300000\n",
+    "EPISODES = 20000\n",
     "LEARNING_RATE = .9\n",
     "DISCOUNT_FACTOR = .99\n",
     "EPSILON = 1\n",
@@ -433,8 +266,11 @@
     "\n",
     "        oldObs = obs\n",
     "        obs,reward,done = get_next_step(oldObs, action)\n",
-    "        \n",
-    "        Q_table[matrix_to_tuple(obs)] = (1-LEARNING_RATE) * Q_table[matrix_to_tuple(obs)] + (LEARNING_RATE) * (reward + DISCOUNT_FACTOR * (max_a_prime(Q_table, obs)))\n",
+    "\n",
+    "        if (obs==identity).all():\n",
+    "            Q_table[matrix_to_tuple(obs)] = 100\n",
+    "        else: \n",
+    "            Q_table[matrix_to_tuple(obs)] = (1-LEARNING_RATE) * Q_table[matrix_to_tuple(obs)] + (LEARNING_RATE) * (reward + DISCOUNT_FACTOR * (max_a_prime(Q_table, obs)))\n",
     "\n",
     "        episode_reward += reward # update episode reward\n",
     "\n",
@@ -457,22 +293,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "507.5376884422068"
+       "82.1794"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Q_table[matrix_to_tuple(A)]"
+    "Q_table[matrix_to_tuple(C@C@C@C)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4671.381909547666"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_table[matrix_to_tuple(C@C)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9889900486978616"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4671/4723"
    ]
   },
   {
