made new comment

--- a/four-step-thin-group.ipynb
+++ b/four-step-thin-group.ipynb
@@ -18,6 +18,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This orginal file was Donald's \"four-step-NN-cleaner.ipynb\" from Euclidean Algorithm and I just changed some small things to have it work for this problem. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 65,
    "metadata": {},
