Make searching its own file

--- a/SL3_Z/Donald/Q_learning_for_SL3_Z.ipynb
+++ b/SL3_Z/Donald/Q_learning_for_SL3_Z.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,9 @@
     "    elif last_mat==2:\n",
     "        return [1, 2, 3]\n",
     "    elif last_mat==3:\n",
-    "        return [0, 2, 3]"
+    "        return [0, 2, 3]\n",
+    "    elif last_mat==4:\n",
+    "        return [0, 1, 2, 3]"
    ]
   },
   {
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,35 +211,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0, 0],\n",
+       "       [0, 1, 0],\n",
+       "       [0, 0, 1]])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# adapted from ChatGPT\n",
-    "def bfs(start):\n",
-    "    # visited = set()\n",
-    "    start_tuple_A = start @ A\n",
-    "    start_tuple_B = start @ B\n",
-    "    start_tuple_C = start @ C\n",
-    "    start_tuple_D = start @ D\n",
-    "\n",
-    "    queue = deque([[start_tuple_A, 0], [start_tuple_B, 1], [start_tuple_C, 2], [start_tuple_D, 3]])\n",
-    "\n",
-    "    while queue:\n",
-    "        vertex = queue.popleft()\n",
-    "        cur_mat = vertex[0]\n",
-    "\n",
-    "        if are_we_done_yet(cur_mat):\n",
-    "            print(\"We found it!\")\n",
-    "            break\n",
-    "\n",
-    "        for neighbor in generate_successors(vertex[1]):\n",
-    "            # neighbor will take values 0, 1, 2\n",
-    "            queue.append([apply_mat(cur_mat, neighbor), neighbor])\n",
-    "        # print(queue)\n",
-    "        # assert(1==2)\n",
-    "\n",
-    "bfs(np.array([[1, 0, 1], [0, -1, -1], [0, 1, 0]]))\n"
+    "B@B@B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1, -1,  0],\n",
+       "       [ 2, -1,  0],\n",
+       "       [-3,  6,  1]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D @ C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(B@B==D).all()"
    ]
   },
   {
@@ -661,6 +694,28 @@
     "        print(\"Average reward for the last 100 iterations: \" + str(sum(list(episode_reward_record))/100))\n",
     "        print(\"epsilon: \" + str(EPSILON) )\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  0,  1],\n",
+       "       [ 2,  1,  3],\n",
+       "       [-3,  0, -2]])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D"
    ]
   },
   {
