--- a/heisenberg_group/Donald/Q_learning_to_origin.ipynb
+++ b/heisenberg_group/Donald/Q_learning_to_origin.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
     "    if (matrix==identity).all():\n",
     "        return 100\n",
     "    else:\n",
-    "        return -5"
+    "        return -2"
    ]
   },
   {
@@ -139,98 +139,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average reward for the last 500 iterations: -497.27\n",
+      "Average reward for the last 500 iterations: -197.552\n",
       "epsilon: 0.9511319235669539\n",
-      "Average reward for the last 500 iterations: -494.12\n",
+      "Average reward for the last 500 iterations: -194.084\n",
       "epsilon: 0.9047424102692004\n",
-      "Average reward for the last 500 iterations: -472.91\n",
+      "Average reward for the last 500 iterations: -185.312\n",
       "epsilon: 0.8606154505570021\n",
-      "Average reward for the last 500 iterations: -453.8\n",
+      "Average reward for the last 500 iterations: -164.3\n",
       "epsilon: 0.8186406930090225\n",
-      "Average reward for the last 500 iterations: -433.43\n",
+      "Average reward for the last 500 iterations: -131.864\n",
       "epsilon: 0.7787131683686925\n",
-      "Average reward for the last 500 iterations: -343.76\n",
+      "Average reward for the last 500 iterations: -48.836\n",
       "epsilon: 0.7407330270401349\n",
-      "Average reward for the last 500 iterations: -258.71\n",
+      "Average reward for the last 500 iterations: 56.428\n",
       "epsilon: 0.7046052893871948\n",
-      "Average reward for the last 500 iterations: -116.75\n",
+      "Average reward for the last 500 iterations: 172.912\n",
       "epsilon: 0.6702396082111141\n",
-      "Average reward for the last 500 iterations: 32.14\n",
+      "Average reward for the last 500 iterations: 330.196\n",
       "epsilon: 0.6375500428128791\n",
-      "Average reward for the last 500 iterations: 226.81\n",
+      "Average reward for the last 500 iterations: 544.804\n",
       "epsilon: 0.6064548440752141\n",
-      "Average reward for the last 500 iterations: 442.06\n",
+      "Average reward for the last 500 iterations: 766.552\n",
       "epsilon: 0.576876250026757\n",
-      "Average reward for the last 500 iterations: 576.46\n",
+      "Average reward for the last 500 iterations: 880.588\n",
       "epsilon: 0.548740291377179\n",
-      "Average reward for the last 500 iterations: 849.25\n",
+      "Average reward for the last 500 iterations: 1077.856\n",
       "epsilon: 0.5219766065369207\n",
-      "Average reward for the last 500 iterations: 1043.5\n",
+      "Average reward for the last 500 iterations: 1362.844\n",
       "epsilon: 0.4965182656589779\n",
-      "Average reward for the last 500 iterations: 1217.8\n",
+      "Average reward for the last 500 iterations: 1534.0\n",
       "epsilon: 0.47230160326267795\n",
-      "Average reward for the last 500 iterations: 1408.9\n",
+      "Average reward for the last 500 iterations: 1685.164\n",
       "epsilon: 0.4492660590208893\n",
-      "Average reward for the last 500 iterations: 1529.02\n",
+      "Average reward for the last 500 iterations: 1893.856\n",
       "epsilon: 0.42735402631251446\n",
-      "Average reward for the last 500 iterations: 1715.71\n",
+      "Average reward for the last 500 iterations: 2021.152\n",
       "epsilon: 0.406510708161521\n",
-      "Average reward for the last 500 iterations: 1900.3\n",
+      "Average reward for the last 500 iterations: 2204.344\n",
       "epsilon: 0.3866839802022521\n",
-      "Average reward for the last 500 iterations: 2017.69\n",
+      "Average reward for the last 500 iterations: 2289.412\n",
       "epsilon: 0.3678242603283259\n",
-      "Average reward for the last 500 iterations: 2081.74\n",
+      "Average reward for the last 500 iterations: 2366.728\n",
       "epsilon: 0.3498843846991425\n",
-      "Average reward for the last 500 iterations: 2302.66\n",
+      "Average reward for the last 500 iterations: 2562.364\n",
       "epsilon: 0.332819489793915\n",
-      "Average reward for the last 500 iterations: 2402.41\n",
+      "Average reward for the last 500 iterations: 2627.032\n",
       "epsilon: 0.3165869002182801\n",
-      "Average reward for the last 500 iterations: 2490.19\n",
+      "Average reward for the last 500 iterations: 2758.408\n",
       "epsilon: 0.3011460219829101\n",
-      "Average reward for the last 500 iterations: 2550.25\n",
+      "Average reward for the last 500 iterations: 2845.516\n",
       "epsilon: 0.28645824098724004\n",
-      "Average reward for the last 500 iterations: 2691.58\n",
+      "Average reward for the last 500 iterations: 2952.004\n",
       "epsilon: 0.27248682645444433\n",
-      "Average reward for the last 500 iterations: 2665.12\n",
+      "Average reward for the last 500 iterations: 3030.952\n",
       "epsilon: 0.2591968390761776\n",
-      "Average reward for the last 500 iterations: 2816.11\n",
+      "Average reward for the last 500 iterations: 3114.796\n",
       "epsilon: 0.24655504363736244\n",
-      "Average reward for the last 500 iterations: 2927.2\n",
+      "Average reward for the last 500 iterations: 3171.916\n",
       "epsilon: 0.23452982590252897\n",
-      "Average reward for the last 500 iterations: 2926.15\n",
+      "Average reward for the last 500 iterations: 3290.44\n",
       "epsilon: 0.22309111355585096\n",
-      "Average reward for the last 500 iterations: 2931.82\n",
+      "Average reward for the last 500 iterations: 3248.212\n",
       "epsilon: 0.21221030099717023\n",
-      "Average reward for the last 500 iterations: 3077.56\n",
+      "Average reward for the last 500 iterations: 3342.256\n",
       "epsilon: 0.20186017780594118\n",
-      "Average reward for the last 500 iterations: 3120.4\n",
+      "Average reward for the last 500 iterations: 3444.256\n",
       "epsilon: 0.19201486069420162\n",
-      "Average reward for the last 500 iterations: 3200.83\n",
+      "Average reward for the last 500 iterations: 3518.92\n",
       "epsilon: 0.1826497287783945\n",
-      "Average reward for the last 500 iterations: 3219.52\n",
+      "Average reward for the last 500 iterations: 3545.44\n",
       "epsilon: 0.17374136200817725\n",
-      "Average reward for the last 500 iterations: 3272.44\n",
+      "Average reward for the last 500 iterations: 3575.428\n",
       "epsilon: 0.16526748259824006\n",
-      "Average reward for the last 500 iterations: 3318.85\n",
+      "Average reward for the last 500 iterations: 3647.848\n",
       "epsilon: 0.1572068993166638\n",
-      "Average reward for the last 500 iterations: 3285.04\n",
+      "Average reward for the last 500 iterations: 3694.768\n",
       "epsilon: 0.14953945449050376\n",
-      "Average reward for the last 500 iterations: 3385.42\n",
-      "epsilon: 0.14224597359606533\n"
+      "Average reward for the last 500 iterations: 3746.38\n",
+      "epsilon: 0.14224597359606533\n",
+      "Average reward for the last 500 iterations: 3725.98\n",
+      "epsilon: 0.13530821730781062\n"
      ]
     }
    ],
    "source": [
     "# adapted from CS 540 Spring 2023 HW 10\n",
-    "# EPISODES = 300000\n",
-    "EPISODES = 20000\n",
+    "EPISODES = 300000\n",
+    "# EPISODES = 20000\n",
     "LEARNING_RATE = .9\n",
     "DISCOUNT_FACTOR = .99\n",
     "EPSILON = 1\n",
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -457,10 +459,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9667966796679668"
+       "0.9375937593759376"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -485,10 +487,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9682424743974346"
+       "0.9985066666666667"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
