--- a/thinGroupGenerator.ipynb
+++ b/thinGroupGenerator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
     "    else: \n",
     "        mat = d\n",
     "        prevMat = 3\n",
-    "        numOfMatrices = random.randint(1, maxMats)\n",
+    "    numOfMatrices = random.randint(1, maxMats)\n",
     "    for i in range(numOfMatrices): \n",
     "        nextMat = random.randint(0,3)\n",
     "        if (prevMat != 2 and nextMat == 0):\n",
@@ -78,7 +78,7 @@
     "# mat [1][0] = mat[1][0]  % 7\n",
     "# mat [1][1] = mat[1][1]  % 7\n",
     "# mat [1][1] = mat[1][1]  % 7\n",
-    "df.to_csv('matrices.csv', index = False)\n"
+    "df.to_csv(\"matrices.csv\", index = False)\n"
    ]
   },
   {
