start updating file paths

--- a/heisenberg_group/Neural_Nets/heisenberg_NN.ipynb
+++ b/heisenberg_group/Neural_Nets/heisenberg_NN.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"heisenberg_data.csv\")"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/heisenberg_data.csv\")"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"heisenberg_data_test.csv\")\n",
+    "test_df = pd.read_csv(\"../Data_Generation/Data_files/heisenberg_data_test.csv\")\n",
     "test_df.columns = ['val1', 'val2', 'val3', \"last_matrix\"]\n",
     "just_input_test = test_df.drop('last_matrix', axis=1)\n",
     "input_data_test = np.array(just_input_test.values.tolist())\n",
