--- a/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning.ipynb
+++ b/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"learned_Q_moves.csv\")"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/learned_Q_moves.csv\")"
    ]
   },
   {
@@ -1203,7 +1203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"learned_Q_moves_test.csv\")\n",
+    "test_df = pd.read_csv(\"../Data_Generation/Data_files/learned_Q_moves_test.csv\")\n",
     "just_input_test = test_df.drop('first_move_by_Q_learning', axis=1)\n",
     "just_input_test = just_input_test.drop('last_matrix', axis=1)\n",
     "\n",
