--- a/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning_learn_value.ipynb
+++ b/heisenberg_group/Neural_Nets/heisenberg_NN_Q_learning_learn_value.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,11 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"Q_moves_scores.csv\")"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores.csv\")"
    ]
   },
   {
@@ -1222,7 +1222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(\"Q_moves_scores_test.csv\")\n",
+    "test_df = pd.read_csv(\"../Data_Generation/Data_files/Q_moves_scores_test.csv\")\n",
     "just_input_test = test_df.drop('first_move_by_Q_learning', axis=1)\n",
     "just_input_test = just_input_test.drop('Q_table_val', axis=1)\n",
     "just_input_test = just_input_test.drop('last_matrix', axis=1)\n",
