--- a/heisenberg_group/Visualizations/vizualize_heisenberg_data.ipynb
+++ b/heisenberg_group/Visualizations/vizualize_heisenberg_data.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"heisenberg_data.csv\")"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/heisenberg_data.csv\")"
    ]
   },
   {
