--- a/heisenberg_group/Q_Learning/Q_learning_to_origin.ipynb
+++ b/heisenberg_group/Q_Learning/Q_learning_to_origin.ipynb
@@ -113,7 +113,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"heisenberg_data.csv\")"
+    "df = pd.read_csv(\"../Data_Generation/Data_files/heisenberg_data.csv\")"
    ]
   },
   {
@@ -1415,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1491,7 +1491,7 @@
    "outputs": [],
    "source": [
     "# test with the other dataframe. \n",
-    "test_df = pd.read_csv(\"heisenberg_data_test.csv\")"
+    "test_df = pd.read_csv(\"../Data_Generation/Data_files/heisenberg_data_test.csv\")"
    ]
   },
   {
@@ -1751,28 +1751,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1,  0,  0],\n",
-       "       [ 0,  1, -1],\n",
-       "       [ 0,  0,  1]])"
-      ]
-     },
-     "execution_count": 224,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A@A@A@C@B@D@B@D@B"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 225,
    "metadata": {},
    "outputs": [
@@ -1853,50 +1831,6 @@
     "results.append((matrix_to_num_steps(B@C@C), 2))\n",
     "\n",
     "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 227,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 0, 9],\n",
-       "       [0, 1, 0],\n",
-       "       [0, 0, 1]])"
-      ]
-     },
-     "execution_count": 227,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "A@A@A@C@C@C@B@B@B@D@D@D"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 228,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 1, -3,  1],\n",
-       "       [ 0,  1,  1],\n",
-       "       [ 0,  0,  1]])"
-      ]
-     },
-     "execution_count": 228,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "B@C@C@B@B@D"
    ]
   },
   {
@@ -2250,7 +2184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Q_table_new = pd.read_csv(\"Q_table_df.csv\")"
+    "# Q_table_new = pd.read_csv(\"../Data_Generation/Data_files/Q_table_df.csv\")"
    ]
   },
   {
