fix the bfs csv file by removing duplicates

--- a/heisenberg_group/Visualizations/viz_BFS.ipynb
+++ b/heisenberg_group/Visualizations/viz_BFS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,11 +17,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"../Data_Generation/Data_files/bfs_heisenberg_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1752, 5)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cube_df = df[df['val1']<10]\n",
+    "cube_df = cube_df[cube_df['val2']<10]\n",
+    "cube_df = cube_df[cube_df['val3']<10]\n",
+    "\n",
+    "cube_df = cube_df[cube_df['val1']>=0]\n",
+    "cube_df = cube_df[cube_df['val2']>=0]\n",
+    "cube_df = cube_df[cube_df['val3']>=0]\n",
+    "\n",
+    "# TODO what the heck? \n",
+    "cube_df.shape"
    ]
   },
   {
