update import paths for data files, add data documentation

--- a/heisenberg_group/Data_Generation/generate_heisenberg_data.ipynb
+++ b/heisenberg_group/Data_Generation/generate_heisenberg_data.ipynb
@@ -178,7 +178,7 @@
     }
    ],
    "source": [
-    "test_df.to_csv('heisenberg_data_100.csv', index=False)"
+    "test_df.to_csv('../Visualizations/heisenberg_data_100.csv', index=False)"
    ]
   }
  ],
