--- a/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
+++ b/heisenberg_group/Data_Generation/generate_heisenberg_w_BFS.ipynb
@@ -222,7 +222,7 @@
     "start_time = time.time()\n",
     "\n",
     "def bfs(start, myDF):\n",
-    "    \n",
+    "    visited.add(matrix_to_tuple(start))\n",
     "    visited.add(matrix_to_tuple(start @ A))\n",
     "    visited.add(matrix_to_tuple(start @ B))\n",
     "    visited.add(matrix_to_tuple(start @ C))\n",
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"bfs_heisenberg_data.csv\", index=False)"
+    "data.to_csv(\"../Visualizations/bfs_heisenberg_data.csv\", index=False)"
    ]
   },
   {
