--- a/heisenberg_group/Q_Learning/Q_learning_to_origin.ipynb
+++ b/heisenberg_group/Q_Learning/Q_learning_to_origin.ipynb
@@ -1705,8 +1705,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_values.to_csv(\"Q_moves_scores.csv\", index=False)\n",
-    "test_values.to_csv(\"Q_moves_scores_test.csv\", index=False)"
+    "train_values.to_csv(\"../Visualizations/Q_moves_scores.csv\", index=False)\n",
+    "test_values.to_csv(\"../Visualizations/Q_moves_scores_test.csv\", index=False)"
    ]
   },
   {
@@ -1715,8 +1715,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train.to_csv(\"learned_Q_moves.csv\", index=False)\n",
-    "test.to_csv(\"learned_Q_moves_test.csv\", index=False)"
+    "# train.to_csv(\"learned_Q_moves.csv\", index=False)\n",
+    "# test.to_csv(\"learned_Q_moves_test.csv\", index=False)"
    ]
   },
   {
@@ -2088,7 +2088,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_problems.to_csv('viz_a_b_sqrt_c.csv', index=False)"
+    "non_problems.to_csv('../Visualizations/viz_a_b_sqrt_c.csv', index=False)"
    ]
   },
   {
@@ -2165,7 +2165,7 @@
     "            columns=['a', 'c', 'b', 'value'])\n",
     "        Q_table_df = pd.concat([df2, Q_table_df])\n",
     "\n",
-    "    Q_table_df.to_csv(\"Q_table_df.csv\", index=False)"
+    "    Q_table_df.to_csv(\"../Visualizations/Q_table_df.csv\", index=False)"
    ]
   },
   {
